# DecisionTree

./: .gitignore  CMakeLists.txt  build.sh  data.csv
DecisionTree/: CMakeLists.txt
DecisionTree/include/: DecisionTree.h
DecisionTree/src/: DecisionTree.cpp  Math.cpp  Tree.cpp
DecisionTree/src/private/: Math.h  Tree.h
Tests/: CMakeLists.txt
Tests/src/: CSVReader.cpp  csvreaderbak  main.cpp
Tests/src/private/: CSVReader.h  Types.h
